test for persisting a question and its set of answers passing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming.physical.strategy=org.hibernate.boot.mode.naming.PhysicalNamingStrategyStandardImpl
 
 spring.h2.console=true
